--- a/css/styles.css
+++ b/css/styles.css
@@ -1102,6 +1102,9 @@ Formulario de contacto
   }
 
 
+/*ESPECIAL NAVIDEÑO*/
+
+
 
   /* PERSONALIZACION EFECTOS ESPECIALES PARA LA PAGINA CORAZONES Y ESTERLLAS
   EFECTOS ESPECIALES INTEGRADOS CON INDEX.HTML Y EFECTOS-MAGICOS.JS
